<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_img"
    tools:context=".AboutUser">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="169dp"
        android:layout_height="145dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="16dp"
        android:scaleType="fitXY"
        android:scaleX="1"
        android:scaleY="1"
        app:layout_constraintEnd_toStartOf="@+id/yearTV"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/anish" />

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="117dp"
        android:layout_height="29dp"
        android:text="@string/name"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/yearTV"
        app:layout_constraintTop_toTopOf="@+id/imageView" />

    <TextView
        android:id="@+id/yearTV"
        android:layout_width="172dp"
        android:layout_height="41dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/year"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/nameTV" />

    <TextView
        android:id="@+id/knowledgeTV"
        android:layout_width="138dp"
        android:layout_height="35dp"
        android:text="@string/knowledge_base"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/languagesTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="60dp"
        android:text="@string/languages"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:verticalScrollbarPosition="right"
        app:layout_constraintEnd_toEndOf="@+id/knowledgeTV"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/knowledgeTV" />

    <TextView
        android:id="@+id/locationTV"
        android:layout_width="171dp"
        android:layout_height="38dp"
        android:layout_marginEnd="16dp"
        android:text="@string/location"
        android:textColor="#ffffff"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/yearTV"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="@+id/yearTV"
        app:layout_constraintTop_toBottomOf="@+id/yearTV"
        app:layout_constraintVertical_bias="0.432" />

</androidx.constraintlayout.widget.ConstraintLayout>