<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddURL">

    <EditText
        android:id="@+id/webPagePT"
        android:layout_width="247dp"
        android:layout_height="42dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:hint="Enter The Website URL Here"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/usernamePT"
        android:layout_width="245dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="Enter Your UserName Here"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/webPagePT"
        app:layout_constraintHorizontal_bias="0.306"
        app:layout_constraintStart_toStartOf="@+id/webPagePT" />

    <EditText
        android:id="@+id/passwordPT"
        android:layout_width="246dp"
        android:layout_height="45dp"
        android:ems="10"
        android:hint="Enter Your Password Here"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/usernamePT"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/usernamePT" />

    <EditText
        android:id="@+id/phoneNumberPT"
        android:layout_width="246dp"
        android:layout_height="42dp"
        android:ems="10"
        android:hint="Enter Your Phone"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/passwordPT"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/passwordPT" />

    <EditText
        android:id="@+id/question1PT"
        android:layout_width="243dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="Enter the Question 1 Here"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/phoneNumberPT"
        app:layout_constraintStart_toStartOf="@+id/phoneNumberPT" />

    <EditText
        android:id="@+id/answer1PT"
        android:layout_width="242dp"
        android:layout_height="46dp"
        android:ems="10"
        android:hint="Enter The Answer 1"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/question1PT"
        app:layout_constraintStart_toStartOf="@+id/question1PT" />

    <EditText
        android:id="@+id/question2PT"
        android:layout_width="243dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="Enter the Question 2 Here"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toEndOf="@+id/answer1PT"
        app:layout_constraintStart_toStartOf="@+id/answer1PT" />

    <EditText
        android:id="@+id/answer2PT"
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Enter The Answer 2"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="@+id/question2PT"
        app:layout_constraintStart_toStartOf="@+id/question2PT" />

    <EditText
        android:id="@+id/question3PT"
        android:layout_width="243dp"
        android:layout_height="47dp"
        android:ems="10"
        android:hint="Enter the Question 3 Here"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toEndOf="@+id/answer2PT"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="@+id/answer2PT" />

    <EditText
        android:id="@+id/answer3PT"
        android:layout_width="236dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="Enter The Answer 3"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/textVie11"
        app:layout_constraintEnd_toEndOf="@+id/question3PT"
        app:layout_constraintStart_toStartOf="@+id/question3PT" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/url"
        app:layout_constraintEnd_toStartOf="@+id/webPagePT"
        app:layout_constraintHorizontal_bias="0.174"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/user_name"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        app:layout_constraintStart_toStartOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/phone_no"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/question_1"
        app:layout_constraintStart_toStartOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/answer_1"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/question_2"
        app:layout_constraintStart_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/answer_2"
        app:layout_constraintStart_toStartOf="@+id/textView8"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/question_3"
        app:layout_constraintStart_toStartOf="@+id/textView9"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textVie11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/answer_3"
        app:layout_constraintStart_toStartOf="@+id/textView10"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <Button
        android:id="@+id/submitBT"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Add New Password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/answer3PT"
        app:layout_constraintHorizontal_bias="0.564"
        app:layout_constraintStart_toStartOf="@+id/textVie11"
        app:layout_constraintTop_toBottomOf="@+id/textVie11" />

</androidx.constraintlayout.widget.ConstraintLayout>